[package]
name = "geomatic"
version = "0.1.0"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
readme = "README.md"
repository = "https://github.com/b-r-u/geomatic"
homepage = "https://github.com/b-r-u/geomatic"
edition = "2018"
description = """
Projections, conversions of geospatial coordinates and related operations.
"""
keywords = ["geospatial", "projections", "proj", "gis", "geography"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "laea"
harness = false
